--- a/project1/package.json
+++ b/project1/package.json
@@ -19,11 +19,10 @@
     "web-vitals": "^0.2.2"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+  "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build"
+}
+,
   "eslintConfig": {
     "extends": "react-app"
   },
